# engine-template

./: .gitignore  .mcp.json  AGENTS.deployed.md  AGENTS.md  CLAUDE.deployed.md  CLAUDE.md  CORE-BUILD-ROADMAP.md  LICENSE  README.md  SECURITY.md
.engine/: engine.json  pyproject.toml  self-map.md  suites.json
.engine/_fixtures/: README.md
.engine/audits/: audit-digest.md  concern-list.json  self-review-setup.md
.engine/check/: agent-coherence.json  agent-frontmatter.json  agent-shape.json  audit-concern-list.json  audit-digest-fingerprint.json  audit-digest-staleness.json  block-coherence.json  catalog-coverage.json  census-completeness.json  codex-agent-coherence.json  codex-agent-schema.json  codex-hooks-schema.json  codex-provider-parity.json  codex-skill-coherence.json  codex-skill-frontmatter.json  codex-skill-shape.json  conduct-frontmatter.json  conduct-shape.json  conduct-weakening-guard.json  contract-frontmatter.json  contract-shape.json  contract-threshold.json  dependency-pinning.json  dependency-review.json  disposition-issue-resolution.json  doc-frontmatter.json  doc-shape.json  engine-manifest.json  first-run-assets.json  first-run-reference-closure.json  guardrail-weakening.json  hard-check-bite.json  in-tool-demo-failure-path.json  interface-coherence.json  interface-declaration.json  knowledge-coverage.json  knowledge-vocabulary.json  lens-consumption.json  link-integrity.json  memory-pointer-public-safety.json  (+31 more)
.engine/conduct/: defaults.md  operator.md
.engine/contracts/: .gitkeep  eADR-0001-versioned-template.md  eADR-0002-repo-authoritative-truth.md  eADR-0003-ship-the-substrate-not-the-data.md  eADR-0004-degrade-to-git-native.md  eADR-0005-nudge-locally-hardgate-at-review.md  eADR-0006-three-enforcement-tiers.md  eADR-0007-engine-product-wall.md  eADR-0008-fault-containment-at-the-seams.md  eADR-0009-modules-declare-files-and-wiring.md  eADR-0010-derived-binding-by-presence.md  eADR-0011-guardrail-integrity.md  eADR-0012-deferral-seams.md  eADR-0013-one-trust-gate-evidence.md  eADR-0014-one-history-living-documents.md  eADR-0015-remediation-loop-not-self-healing.md  eADR-0016-ontology-surfaces-catalogued-ranked.md  eADR-0017-engine-namespaced-identifiers.md  eADR-0018-cognitive-substrate-one-workflow.md  eADR-0019-memory-knowledge-distinct-substrates.md  eADR-0020-thin-dispatcher-kind-registry.md  (+19 more)
(+645 files in other folders)
