# Engine tool-runtime dependency spec (foundation infrastructure artifact).
#
# The engine's tools are Python, run inside an engine-namespaced, uv-managed
# tool-runtime: this committed spec + the pinned uv.lock resolve it, and a
# gitignored .engine/.venv/ is materialized by `uv sync` (decision-log D-156).
#
# Dependency groups are added append-as-built, one per dependency-carrying
# module (named by the module's id, PEP 735 normalized), as packages land
# (stage-0-harness §4; decision-log D-158). The `core` group carries the first:
# the `jsonschema` validator the `core` validation engine's `schema` kind needs
# to enforce JSON Schema 2020-12 (the locked schemas design requires the standard
# built-in meta-schema, not bespoke meta-machinery), and `pyyaml`, which that same
# `schema` kind uses to read a prose surface's YAML frontmatter to a data object
# before validating it (the locked schemas/validation foundation parses "a file or
# its YAML frontmatter"; the frontmatter reader D-090 deferred now lands here).
# `default-groups` lists it so
# every `uv sync`/`uv run` (CI and local) resolves it with no per-command flag —
# future dep-carrying modules append their group here, no workflow edit needed,
# until slice 25's module manager derives the selection (the CI uv-group seam).
[project]
name = "engine-tools"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
core = ["jsonschema>=4.18", "mcp>=1.28.0", "pyyaml>=6.0"]

[tool.uv]
default-groups = ["core"]
